texto sobrepondo o bg, melhorando a leitura

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             align-items: center;
             padding: 0 40px;
         }
+        .container-start li, .container-start p {
+            background-color: #010101;
+        }
         h1 {
             font-size: 30px;
         }
