--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             align-items: center;
             padding: 0 40px;
         }
-        .container-start li, .container-start p {
+        .container-start li, .container-start h4 {
             background-color: #010101;
         }
         h1 {
